# noa

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  tarpaulin-report.html  test.c  test.cpp  test.long  test.py  test.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
hello/: foo  foo.c  main.c
sample/: foo.h  main.c
src/: buffer.rs  clipboard.rs  command_bar.rs  command_box.rb  command_box.rs  completion.rs  diff.rs  editor.rs  editorconfig.rs  eventloop.rs  file.rs  finder.rs  frontend.rs  fuzzy.rs  gap_buffer.rs  helpers.rs  highlight.rs  interval_tree.rs  language.rs  layout.rs  line_edit.rs  logger.rs  lsp.rs  main.rs  modal.rs  ned.rs  plugin.rs  range_tree.rs  rope.rs  screen.rs  search.rs  status_map.rs  syntax_highlight.rs  terminal.rs  theme.rs  utils.rs  view.rs  watcher.rs  worker.rs
src/buffer/: Cargo.toml  buffer.rs  char_iter.rs  cursor.rs  display_width.rs  find.rs  grapheme_iter.rs  highlighting.rs  lang.rs  lib.rs  mut_raw_buffer.rs  mutable_raw_buffer.rs  paragraph_iter.rs  raw_buffer.rs  reflow_iter.rs  rope.rs  scroll.rs  snapshot.rs  syntax.rs  undoable_raw_buffer.rs  word.rs  word_iter.rs
src/buffer/benches/: bench_grapheme_iter.rs  bench_paragraph_iter.rs
src/buffer/extras/: comment_out.rs  duplicate_lines.rs  edit_words.rs  expand_selections.rs  indent.rs  matching_brackets.rs  mod.rs  move_lines.rs  move_within_lines.rs  move_words.rs  select_lines.rs  truncate.rs
src/buffer/tests/: test_buffer.rs  test_raw_buffer.rs
src/common/: Cargo.toml  dirs.rs  fast_hash.rs  fuzzyvec.rs  int_traits.rs  lib.rs  logger.rs  macros.rs  oops.rs  prioritized_vec.rs  sync_protocol.rs  syncd_protocol.rs  time_report.rs  tmux.rs
src/common/collections/: fuzzy_set.rs  interval_map.rs  mod.rs
src/compositor/: Cargo.toml  canvas.rs  compositor.rs  lib.rs  line_edit.rs  surface.rs  terminal.rs  terminal_exts.rs
src/cui/: Cargo.toml  canvas.rs  compositor.rs  lib.rs  line_edit.rs  surface.rs  terminal.rs  utils.rs
src/cui/surfaces/: mod.rs  prompt.rs  yes_no.rs
src/editor/: Cargo.toml  application.rs  clipboard.rs  completion.rs  config.rs  defaults.toml  document.rs  editor.rs  event_listener.rs  file_watch.rs  finder.rs  flash.rs  fuzzy.rs  git.rs  highlighting.rs  hook.rs  job.rs  keybindings.rs  keybindings.toml  linemap.rs  lsp.rs  main.rs  mainloop.rs  markdown.rs  minimap.rs  movement.rs  notification.rs  path.rs  plugin.rs  search.rs  theme.rs  theme.toml  view.rs  words.rs
src/editor/actions/: basic_editing.rs  change_case.rs  goto.rs  linemap.rs  lsp.rs  mod.rs  scrolling.rs  truncate.rs
src/editor/hooks/: mod.rs
src/editor/plugins/: lsp.rs  mod.rs
src/editor/ui/: bottom_line_view.rs  buffer_view.rs  bump_view.rs  canvas.rs  completion_view.rs  compositor.rs  finder_view.rs  helpers.rs  line_edit.rs  markdown.rs  meta_line_view.rs  mod.rs  prompt.rs  prompt_view.rs  replacer_view.rs  selector_view.rs  surface.rs  terminal.rs  too_small_view.rs
src/editor/ui/views/: buffer_view.rs  bump_view.rs  completion_view.rs  meta_line_view.rs  mod.rs  prompt_view.rs  selector_view.rs  too_small_view.rs
src/editorconfig/: Cargo.toml  detect_indent.rs  lib.rs
src/frontends/: terminal.rs
src/langs/: .gitignore  Cargo.toml  build.rs  definitions.rs  highlighting.rs  language.rs  lib.rs  lsp.rs
src/langs/tree_sitter/: mod.rs
src/languages/: .gitignore  Cargo.toml  build.rs  definitions.rs  language.rs  languages.rs  languages.yaml  lib.rs  lsp.rs
src/languages/queries/rust/: highlight.scm
src/languages/tree_sitter/: mod.rs
src/lspd/: Cargo.toml  eventloop.rs  main.rs
src/main/: Cargo.toml  eventloop.rs  view.rs
src/noa/: Cargo.toml  buffer.rs  buffer_manager.rs  buffer_set.rs  buffer_surface.rs  clipboard.rs  completion.rs  config.rs  document.rs  editor.rs  eventloop.rs  extcmd.rs  finder.rs  fuzzy_set.rs  git.rs  highlighting.rs  line_edit.rs  main.rs  minimap.rs  notification.rs  open.rs  selector.rs  sync_client.rs  syncd.rs  syncd_client.rs  terminal.rs  textarea.rs  theme.rs  ui.rs  view.rs
src/noa/actions/: basic_editing.rs  change_case.rs  goto.rs  linemap.rs  mod.rs  movement.rs  scrolling.rs  selection.rs  transform.rs
src/noa/surfaces/: bottom_bar.rs  buffer.rs  completion.rs  finder.rs  mod.rs  prompt.rs  too_small.rs  yes_no.rs
src/noa/terminal/: canvas.rs  compositor.rs  mod.rs
src/noa/ui/: canvas.rs  compositor.rs  display_width.rs  mod.rs  surface.rs  terminal.rs  theme.rs
src/noa/ui/surfaces/: buffer.rs  mod.rs  too_small.rs
src/noa/views/: buffer_view.rs  metaline_view.rs  mod.rs
src/noa/views/snapshots/: noa__views__buffer_view__tests__with_softwrap.snap  noa__views__buffer_view__tests__with_softwrap.snap.new
src/plugins/: command_menu.rs  finder.rs  mod.rs  primitive.rs
src/proxy/: Cargo.toml  client.rs  eventloop.rs  lib.rs  lsp.rs  main.rs  protocol.rs  server.rs
src/replace/: Cargo.toml  main.rs  path_scanner.rs  search_query.rs  ui.rs
src/sync/: Cargo.toml  buffer_sync.rs  eventloop.rs  lsp.rs  main.rs
src/syncd/: Cargo.toml  buffer_sync.rs  eventloop.rs  lsp.rs  main.rs
src/terminal/: Cargo.toml  lib.rs  terminal.rs
src/ui/: Cargo.toml  lib.rs  terminal.rs
