[package]
name = "noa"
version = "0.0.0"
edition = "2018"
authors = ["Seiya Nuta <nuta@seiya.me>"]
description = "A simplistic terminal-based text editor which is surely not your cup of tea."
license = "CC0-1.0 OR MIT"
readme = "README.md"
repository = "https://github.com/nuta/noa"

[dependencies]
log = "0"
simplelog = "0"
better-panic = "0"
lazy_static = "1"
maplit = "1"
backtrace = "0"
structopt = "0"
crossterm = "0"
unicode-width = "0"
ropey = "1"
dirs = "3"
regex = "1"
tempfile = "3"
ignore = "0"
sublime_fuzzy = "0"

[dev-dependencies]
pretty_assertions = "0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
