[package]
name = "noa"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[dependencies]
log = "0"
simplelog = "0"
backtrace = "0"
structopt = "0"
parking_lot = "0"
dirs = "3"
ropey = "1"
crossterm = "0"

[dev-dependencies]
pretty_assertions = "0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
