[package]
name = "noa_buffer"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0"
ropey = "^1.3.2"
unicode-width = "0"
unicode-segmentation = "1"
arrayvec = "0"

noa_common = { path = "../common" }
noa_editorconfig = { path = "../editorconfig" }


[dev-dependencies]
pretty_assertions = "1"
