[package]
name = "noa_buffer"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
ropey = "^1.3.2"
unicode-width = "0"
unicode-segmentation = "1"
arrayvec = "0"
lsp-types = "^0.91"

noa_common = { path = "../common" }
noa_editorconfig = { path = "../editorconfig" }
noa_languages = { path = "../languages" }


[dev-dependencies]
pretty_assertions = "1"
