[package]
name = "noa_common"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
backtrace = "0"
simplelog = "0"
log = "0"
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
dirs = "3"
lsp-types = "0"
fxhash = "0.2.1"
