[package]
name = "noa_cui"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
log = "0"
parking_lot = "0"
tokio = { version = "1", features = ["full"] }
futures = "0"
unicode-width = "0"
crossterm = { version = "0", features = ["event-stream"] }
arrayvec = "0"
base64 = "0"

noa_common = { path = "../common" }
noa_buffer = { path = "../buffer" }
