[package]
name = "noa"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[[bin]]
name = "noa"
path = "main.rs"

[dev-dependencies]
pretty_assertions = "0"

[dependencies]
log = "0"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0"
parking_lot = "0"
arc-swap = "1"
rayon = "1"
bitflags = "1"
arrayvec = "0"
id-arena = "2"
ropey = "1"
which = "4"
regex = "1"
async-trait = "0"
once_cell = "1"
base64 = "0"
ignore = "0"
grep = "0"
git2 = { version = "0", default-features = false }
libgit2-sys = "0"
toml = "0"

noa_common = { path = "../common" }
noa_buffer = { path = "../buffer" }
noa_languages = { path = "../languages" }
noa_editorconfig = { path = "../editorconfig" }
noa_compositor = { path = "../compositor" }
