[package]
name = "noa_languages"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
log = "0"
tree-sitter = "0"
num_cpus = "1"
toml = "0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"

[build-dependencies]
cc = { version = "*", features = ["parallel"] }
