[package]
name = "noa"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2021"

[[bin]]
name = "noa"
path = "main.rs"

[dev-dependencies]
pretty_assertions = "0"

[dependencies]
log = "0"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0"
grep = "0"
fuzzy-matcher = "0"
ignore = "0"
num_cpus = "1"
regex = "1"
toml = "0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
arc-swap = "1"
dirs = "3"

console-subscriber = "0"

noa_common = { path = "../common" }
noa_buffer = { path = "../buffer" }
noa_languages = { path = "../languages" }
noa_editorconfig = { path = "../editorconfig" }
noa_compositor = { path = "../compositor" }
