[package]
name = "noa-syncd"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2018"

[[bin]]
name = "noa-syncd"
path = "main.rs"

[dev-dependencies]
pretty_assertions = "0"

[dependencies]
log = "0"
anyhow = "1"
simplelog = "0"
backtrace = "0"
structopt = "0"
tokio = { version = "1", features = ["full"] }
futures = "0"
async-trait = "0"
parking_lot = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonrpc-core = "17"
lsp-types = "0"
daemonize = "0"

noa_buffer = { path = "../buffer" }
noa_common = { path = "../common" }
