[package]
name = "noa_terminal"
version = "0.0.0"
authors = ["Seiya Nuta <nuta@seiya.me>"]
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
log = "0"
tokio = { version = "1", features = ["full"] }
futures = "0"
parking_lot = "0"
crossterm = { version = "0", features = ["event-stream"] }
arrayvec = "0"

noa_common = { path = "../common" }
noa_buffer = { path = "../buffer" }
